_generated-doc/2.7/config/quarkus-reactive-messaging-reactive-messaging-build-time-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-messaging-reactive-messaging-build-time-config_configuration]]link:#quarkus-reactive-messaging-reactive-messaging-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-reactive-messaging-reactive-messaging-build-time-config_quarkus.reactive-messaging.health.enabled]]`link:#quarkus-reactive-messaging-reactive-messaging-build-time-config_quarkus.reactive-messaging.health.enabled[quarkus.reactive-messaging.health.enabled]`

[.description]
--
Whether an health check is published in case the smallrye-health extension is present.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-reactive-messaging-reactive-messaging-build-time-config_quarkus.reactive-messaging.auto-connector-attachment]]`link:#quarkus-reactive-messaging-reactive-messaging-build-time-config_quarkus.reactive-messaging.auto-connector-attachment[quarkus.reactive-messaging.auto-connector-attachment]`

[.description]
--
Whether it should automatically configure the *connector* attribute of channels that don't have an upstream source (for incoming channels), or a downstream consumer (for outgoing channels). When enabled, it verifies that there is only a single connector on the classpath. In that case, it automatically associates the *orphans* channel to the connector, removing the need to add the `.connector` attribute in the application configuration.
--|boolean 
|`true`

|===