_generated-doc/2.16/config/quarkus-reactive-messaging-reactive-messaging-build-time-config.adoc

:summaryTableId: quarkus-reactive-messaging-reactive-messaging-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-messaging-reactive-messaging-build-time-config_configuration]]link:#quarkus-reactive-messaging-reactive-messaging-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-reactive-messaging-reactive-messaging-build-time-config_quarkus.reactive-messaging.health.enabled]]`link:#quarkus-reactive-messaging-reactive-messaging-build-time-config_quarkus.reactive-messaging.health.enabled[quarkus.reactive-messaging.health.enabled]`

[.description]
--
Whether a health check is published in case the smallrye-health extension is present.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REACTIVE_MESSAGING_HEALTH_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REACTIVE_MESSAGING_HEALTH_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-reactive-messaging-reactive-messaging-build-time-config_quarkus.reactive-messaging.auto-connector-attachment]]`link:#quarkus-reactive-messaging-reactive-messaging-build-time-config_quarkus.reactive-messaging.auto-connector-attachment[quarkus.reactive-messaging.auto-connector-attachment]`

[.description]
--
Whether it should automatically configure the _connector_ attribute of channels that don't have an upstream source (for incoming channels), or a downstream consumer (for outgoing channels). When enabled, it verifies that there is only a single connector on the classpath. In that case, it automatically associates the _orphans_ channel to the connector, removing the need to add the `.connector` attribute in the application configuration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REACTIVE_MESSAGING_AUTO_CONNECTOR_ATTACHMENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REACTIVE_MESSAGING_AUTO_CONNECTOR_ATTACHMENT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`

|===